--- a/web/index.html
+++ b/web/index.html
@@ -7,17 +7,38 @@
   <body>
   	<div class = "container">
   		<div id="MU" class="column">
-  			<button id="A" class="MUButton">A</button>
-  			<button id="B" class="MUButton">B</button>
-  			<button id="C" class="MUButton">C</button>
+  			<img src="robot.png" id="MachineA" class="MUButton" alt="Machine A">
+  			<img src="robot.png" id="MachineB" class="MUButton" alt="Machine B">
+  			<img src="robot.png" id="MachineC" class="MUButton" alt="Machine C">
   		</div>
-  		<div id="centre" class="column">
-  			<div id="flags" class="flags">Flags</div>
-  			<div id="cout" class="cout">Cout</div>
+  		<div id="cen" class="column">
+  			<div style="background-color: RGB(0,0,0); height:40%; width:30%; margin: 10px auto; padding:5%; margin-bottom: 15px">
+				<div class="row">
+					Paid
+					<div id="P" class="bulb"></div>
+				</div>
+  				<div class="row">
+  					Accepted
+  					<div id="A" class="bulb"></div>
+  				</div>
+  				<div class="row">
+  					Rejected
+  					<div id="R" class="bulb"></div>
+  				</div>
+  				<div class="row">
+  					Acknowledge Repair
+  					<div id="AR" class="bulb"></div>
+  				</div>
+  				<div class="row">
+  					Finished
+  					<div id="F" class="bulb"></div>
+  				</div>
+  			</div>
+  			<div id="cout"></div>
   		</div>
   		<div id="provider" class="column">
-  			<button id="P1" class="PRButton">P1</button>
-  			<button id="P2" class="PRButton">P2</button>
+  			<button id="P1" class="PRButton">Provider 1</button>
+  			<button id="P2" class="PRButton">Provider 2</button>
   		</div>
   	</div>
 
