--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
   			<img src="./images/robot.png" id="MachineC" class="MUButton" alt="Machine C">
   		</div>
   		<div id="cen" class="column">
-  			<div style="background-color: RGB(0,0,0); height:40%; width:30%; margin: 10px auto; padding:5%; margin-bottom: 15px">
+  			<div style="background-color: RGB(40,40,40); height:40%; width:30%; margin: 10px auto; padding:5%; margin-bottom: 15px; border-radius: 25px">
 				<div class="row">
 					Paid
 					<div id="P" class="bulb"></div>
@@ -37,22 +37,25 @@
   			<div id="cout"></div>
   		</div>
   		<div id="provider" class="column">
-  			<div class="providerUI">
-  				<div id="P1" class="PRLabel">Provider 1</div>
-  				<img src="./images/pied-piper.png" id="logoPr1" class="logoPr" alt="logoProvider1">
-  				<h5 style="text-align:center"> New Contract Offer! </h5>
-  				<button id="Acc1" type="submit" class="acceptButton">Acknowledge Contract </button>
-  				<button id="Rej1" type="submit" class="rejectButton">Reject Contract</button>
-  			</div>
-  			<div class="providerUI">
-  				<div id="P2" class="PRLabel">Provider 2</div>
-  				<img src="./images/hooli.png" id="logoPr2" class="logoPr" alt="logoProvider2">
-  				<h5 style="text-align:center"> New Contract Offer! </h5>
-  				<button id="Acc2" type="submit" class="acceptButton">Acknowledge Contract </button>
-  				<button id="Rej2" type="submit" class="rejectButton">Reject Contract</button>
-  			</div>
-  		</div>
-  	</div>
+        <div class="providerUI">
+          <div id="P1" class="PRLabel">Provider 1</div>
+          <img src="./images/pied-piper.png" id="logoPr1" class="logoPr" alt="logoProvider1">
+          <h5 style="text-align:center"> New Contract Offer! </h5>
+          <div style="text-align:center">
+          <button id="Acc1" type="submit" class="acceptButton">Accept Contract </button>
+          <button id="Rej1" type="submit" class="rejectButton">Reject Contract</button>
+          </div>
+        </div>
+        <div class="providerUI">
+          <div id="P2" class="PRLabel">Provider 2</div>
+          <img src="./images/hooli.png" id="logoPr2" class="logoPr" alt="logoProvider2">
+          <h5 style="text-align:center"> New Contract Offer! </h5>
+          <div style="text-align:center">
+          <button id="Acc2" type="submit" class="acceptButton">Accept Contract </button>
+          <button id="Rej2" type="submit" class="rejectButton">Reject Contract</button>
+          </div>
+        </div>
+      </div>
 
   </body>
 
