--- a/web/index.html
+++ b/web/index.html
@@ -12,27 +12,27 @@
   			<img src="./images/robot.png" id="MachineC" class="MUButton" alt="Machine C">
   		</div>
   		<div id="cen" class="column">
-  			<div style="background-color: RGB(40,40,40); height:40%; width:30%; margin: 10px auto; padding:5%; margin-bottom: 15px; border-radius: 25px">
+  			<div style="background-color: #4d4d4d; height:40%; width:30%; margin: 10px auto; padding:5%; margin-bottom: 15px; border-radius: 25px" id="lights">
 				<div class="row">
 					Paid
 					<div id="P" class="bulb"></div>
 				</div>
-  				<div class="row">
-  					Accepted
-  					<div id="A" class="bulb"></div>
-  				</div>
-  				<div class="row">
-  					Rejected
-  					<div id="R" class="bulb"></div>
-  				</div>
-  				<div class="row">
-  					Acknowledge Repair
-  					<div id="AR" class="bulb"></div>
-  				</div>
-  				<div class="row">
-  					Finished
-  					<div id="F" class="bulb"></div>
-  				</div>
+				<div class="row">
+					Accepted
+					<div id="A" class="bulb"></div>
+				</div>
+				<div class="row">
+					Rejected
+					<div id="R" class="bulb"></div>
+				</div>
+				<div class="row">
+					Acknowledge Repair
+					<div id="AR" class="bulb"></div>
+				</div>
+				<div class="row">
+					Finished
+					<div id="F" class="bulb"></div>
+  			</div>
   			</div>
   			<div id="cout"></div>
   		</div>
