--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<link rel="stylesheet" href="./stylesheet/style.css" type="text/css">
+		<link rel="stylesheet" href="./stylesheet/style.css" type="text/css">
+		<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+		<script type="text/javascript" src="js/demo.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
+
   </head>
 
   <body>
