--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,9 @@
   	<link rel="stylesheet" href="./stylesheet/style.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/functions.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/demo.js"></script>
+    <script src="js/main.js"></script>
   </head>
 
   <body>
@@ -36,7 +39,11 @@
 					<div id="F" class="bulb"></div>
   			</div>
   			</div>
-  			<div id="cout"></div>
+  			<div id="cout">
+          <div id="msg1" class="msg"></div>
+          <div id="msg2" class="msg"></div>
+          <div id="msg3" class="msg"></div>
+        </div>
   		</div>
   		<div id="provider" class="column">
         <div class="providerUI">
@@ -58,7 +65,7 @@
           </div>
         </div>
       </div>
-  <div class="sprite"></div>
+  <div class="sprite"><img id="alert" src="./images/notification.png" style="height:40px"></div>
 
   </body>
 
