--- a/web/index.html
+++ b/web/index.html
@@ -40,9 +40,15 @@
   			</div>
   			</div>
   			<div id="cout">
-          <div id="msg1" class="msg"></div>
-          <div id="msg2" class="msg"></div>
-          <div id="msg3" class="msg"></div>
+          <div id="msg1" class="msg">Malfunction Detected!</div>
+          <div id="msg2" class="msg">Deploying Contract...</div>
+          <div id="msg3" class="msg">Contract displayed, provider notified</div>
+          <div id="msg4" class="msg">Waiting for Provider Confirmation</div>
+          <div id="msg51" class="msg">Contract rejected</div>
+          <div id="msg511" class="msg">Waiting for repairs</div>
+          <div id="msg512" class="msg">Machine Works, updating Contract</div>
+          <div id="msg52" class="msg">Contract accepted</div>
+          <div id="msg6" class="msg">Withdrawing ether</div>
         </div>
   		</div>
   		<div id="provider" class="column">
