--- a/web/index.html
+++ b/web/index.html
@@ -38,14 +38,15 @@
 					Finished
 					<div id="F" class="bulb"></div>
   			</div>
-  			</div>
+        </div>
+        <button id="muWithdraw" class="acceptButton" style = "visibility: hidden">Withdraw</button>
   			<div id="cout">
           <div id="msg1" class="msg">Malfunction Detected!</div>
           <div id="msg2" class="msg">Deploying Contract...</div>
-          <div id="msg3" class="msg">Contract displayed, provider notified</div>
+          <div id="msg3" class="msg">Contract deployed, provider notified</div>
           <div id="msg4" class="msg">Waiting for Provider Confirmation</div>
           <div id="msg51" class="msg">Contract rejected</div>
-          <div id="msg511" class="msg">Waiting for repairs</div>
+          <div id="msg511" class="msg">Waiting for repairs...</div>
           <div id="msg512" class="msg">Machine Works, updating Contract</div>
           <div id="msg52" class="msg">Contract accepted</div>
           <div id="msg6" class="msg">Withdrawing ether</div>
@@ -59,15 +60,7 @@
           <div style="text-align:center">
           <button id="Acc1" type="submit" class="acceptButton Contract1">Accept Contract </button>
           <button id="Rej1" type="submit" class="rejectButton Contract1">Reject Contract</button>
-          </div>
-        </div>
-        <div class="providerUI">
-          <div id="P2" class="PRLabel">Provider 2</div>
-          <img src="./images/galactic_empire.png" id="logoPr2" class="logoPr" alt="logoProvider2">
-          <h5 id="notif2" class="notif"> New Contract Offer! </h5>
-          <div style="text-align:center">
-          <button id="Acc2" type="submit" class="acceptButton Contract2">Accept Contract </button>
-          <button id="Rej2" type="submit" class="rejectButton Contract2">Reject Contract</button>
+          <!-- <button id="With1" type="submit" class="withdrawButton Contract1">Withdraw</button> -->
           </div>
         </div>
       </div>
