--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
   			<img src="./images/robot.png" id="MachineC" class="MUButton" alt="Machine C">
   		</div>
   		<div id="cen" class="column">
-  			<div style="background-color: #4d4d4d; height:45%; width:30%; margin: 10px auto; padding:5%; margin-bottom: 15px; border-radius: 25px" id="lights">
+  			<div style="background-color: #4d4d4d; height:45%; width:90%; margin: 5px auto; padding:10px; margin-bottom: 15px; border-radius: 25px" id="lights">
 				<div class="row">
 					Paid
 					<div id="P" class="bulb"></div>
@@ -37,7 +37,11 @@
 				<div class="row">
 					Finished
 					<div id="F" class="bulb"></div>
-  			</div>
+        </div>
+          <div class="row" id="muAddr">MU : </div>
+          <div class="row" id="providerAddr">Provider :</div>
+          <div class="row" id="contractAddr">Contract :</div>
+          <div class="row" id="amount">Euros :</div>
         </div>
         <button id="muWithdraw" class="acceptButton" style = "visibility: hidden">Withdraw</button>
   			<div id="cout">
